Finish first user story

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -15,6 +15,12 @@ publisher:
   email: ehmi@medcom.dk
 
 dependencies:
+  ihe.iti.mcsd: 3.9.0
+  hl7.fhir.dk.core: 3.4.0
+  medcom.fhir.dk.core: 2.4.0
+  medcom.fhir.dk.messaging: 3.0.0
+  medcom.fhir.dk.terminology: 1.8.1
+  dk.ehmi.terminology: 1.0.1-draft
   dk.ehmi.eer: dev
 
 menu:
